--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,6 @@
+<div class="container">
+    <h1 class="mt-3 mb-3">Products</h1>
 
+    <router-outlet></router-outlet>
+</div>
 
-<router-outlet></router-outlet>
