--- a/frontend/src/app/components/product-details/product-details.component.html
+++ b/frontend/src/app/components/product-details/product-details.component.html
@@ -5,4 +5,6 @@
         <hr>
         <h4>Description</h4>
         <p>{{ product.description }}</p>
+        <h5>Category</h5>
+        <p>{{ product.category.categoryName}}</p>
     
