--- a/frontend/src/app/components/product-list/product-list.component.html
+++ b/frontend/src/app/components/product-list/product-list.component.html
@@ -1,3 +1,6 @@
 <p *ngFor="let product of products">
     {{ product.name}}: {{ product.unitPrice | currency:'USD'}}
+    {{product.category.categoryName}}
+    
 </p>
+
