Filter Products by category

--- a/frontend/src/app/components/product-category-menu/product-category-menu.component.html
+++ b/frontend/src/app/components/product-category-menu/product-category-menu.component.html
@@ -1,18 +1,14 @@
 <div class="menu-sidebar-content js-scrollbar1">
     <nav class="navbar-sidebar">
         <ul class="list-unstyled navbar-list">
-            <li>
-                <a href="#">Books</a>
+            <li *ngFor="let category of categories">
+
+                <a routerLink="/category/{{ category.id }}" routerLinkActive="active-link">
+                    {{ category.categoryName }}
+                </a>
+
             </li>
-            <li>
-                <a href="#">Coffee Mugs</a>
-            </li>
-            <li>
-                <a href="#">Mouse Pads</a>
-            </li>
-            <li>
-                <a href="#">Luggage Tags</a>
-            </li>
+
         </ul>
     </nav>
 </div>
