Add Search Products by Keyword

--- a/frontend/src/app/components/product-category-menu/product-category-menu.component.html
+++ b/frontend/src/app/components/product-category-menu/product-category-menu.component.html
@@ -3,7 +3,7 @@
         <ul class="list-unstyled navbar-list">
             <li *ngFor="let category of categories">
 
-                <a routerLink="/category/{{ category.id }}" routerLinkActive="active-link">
+                <a routerLink="/category/{{ category.id }}/{{ category.categoryName }}" routerLinkActive="active-link">
                     {{ category.categoryName }}
                 </a>
 
