--- a/frontend/src/app/components/product-list/product-list-grid.component.html
+++ b/frontend/src/app/components/product-list/product-list-grid.component.html
@@ -1,5 +1,10 @@
 <div class="main-content">
     <div class="section-content section-content-p30">
+        
+        
+        <h4 *ngIf="currentCategoryName">Category: {{ currentCategoryName }}</h4>
+        <hr *ngIf="currentCategoryName">
+        
         <div class="container-fluid">
             <div class="row">
 
