--- a/frontend/src/app/components/search/search.component.html
+++ b/frontend/src/app/components/search/search.component.html
@@ -1,7 +1,8 @@
 <form class="form-header" onsubmit="return false;" method="GET">
     <input class="au-input au-input-xl" type="text" name="search"
+        [(ngModel)] = "key"
         placeholder="Search for data ..." />
-    <button class="au-btn-submit" type="submit">
+    <button (click)="doSearch(key)" class="au-btn-submit" type="submit">
         Search
     </button>
 </form>
