--- a/frontend/src/app/components/product-details/product-details.component.html
+++ b/frontend/src/app/components/product-details/product-details.component.html
@@ -1,21 +1,16 @@
-<div class="main-content">
-        <div class="section-content section-content-p30">
-            <div class="container-fluid">
-                <div class="row">
+<div class="detail-section">
+    <div class="container-fluid">
 
-                    <div>
-                        <img src="{{ product.imageUrl }}" class="img-responsive" width="200px">
+        <img src="{{ product.imageUrl }}" class="detail-img">
 
-                        <h3>{{ product.name }}</h3>
-                        <div class="price">{{ product.unitPrice | currency:'USD' }}</div>
-                        <a href="shopping-detail.html" class="primary-btn">Add to cart</a>
+        <h3>{{ product.name }}</h3>
+        <div class="price">{{ product.unitPrice | currency:'USD' }}</div>
+        <a href="shopping-detail.html" class="primary-btn">Add to cart</a>
 
-                        <h4>Description</h4>
-                        <p>{{ product.description }}</p>
+        <hr>
+        <h4>Description</h4>
+        <p>{{ product.description }}</p>
 
-                        <a routerLink="/products">Back to Product List</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <a routerLink="/products" class="mt-5">Back to Product List</a>
     </div>
+</div>
