--- a/frontend/src/app/components/product-list/product-list-grid.component.html
+++ b/frontend/src/app/components/product-list/product-list-grid.component.html
@@ -9,8 +9,15 @@
             <div class="row">
 
                 <!-- loop over the collection of products -->
-                <div *ngFor="let product of products" class="col-md-3">
-                    
+                <div *ngFor="
+                    let product of products | paginate : {
+                            itemsPerPage: pageSize,
+                            currentPage: page,
+                            totalItems: count
+                          };
+                    let i = index
+                  " class="col-md-3"
+                  >
                     <div class="product-box">
 
                         <a routerLink="/products/{{ product.id }}">
@@ -30,7 +37,7 @@
                 </div>
 
                 <!-- if products empty then display a message-->
-                <div *ngIf="products.length == 0" class="alert alert-warning col-md-12" role="alert">
+                <div *ngIf="products?.length == 0" class="alert alert-warning col-md-12" role="alert">
                     No products found.
                 </div>
            
@@ -38,7 +45,48 @@
             </div>
 
             <!-- begin footer -->
+
+            <div class="footer-pagination">
+                <div class="row">
+                    <div class="col-md-6"></div>
+
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-md-9" style="padding-left: 30%;">
+                            
+                            <pagination-controls
+                            previousLabel="Prev"
+                            nextLabel="Next"
+                            [responsive]="true"
+                            (pageChange)="handlePageChange($event)"
+                            
+                            ></pagination-controls>
+                            
+                            </div>
+
+                            <div class="col-md-3 mt-2" style="text-align: right;">
+                            
+                            <span class="mr-2">Page Size</span>
+
+                            <select #myPageSelect (change)="
+                            updatePageSize($event)">
+                            <option>2</option>
+                            <option selected="true">5</option>
+                            <option>10</option>
+                            <option>20</option>
+                            <option>50</option>
+                            </select>
+                            </div>
+
+
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
     
+            <!--
             <div class="footer-pagination">
                 <div class="row">
                     <div class="col-md-6"></div>
@@ -63,6 +111,7 @@
                     </div>
                 </div>
             </div>
+            -->
 
             <!-- end footer -->
             
