--- a/frontend/src/app/components/product-list/product-list-grid.component.html
+++ b/frontend/src/app/components/product-list/product-list-grid.component.html
@@ -10,6 +10,11 @@
 
                 <!-- loop over the collection of products -->
                 <div *ngFor="
+                let product of products
+                " class="col-md-3"
+              >
+                <!--
+                <div *ngFor="
                     let product of products | paginate : {
                             itemsPerPage: pageSize,
                             currentPage: page,
@@ -18,6 +23,7 @@
                     let i = index
                   " class="col-md-3"
                   >
+                -->
                     <div class="product-box">
 
                         <a routerLink="/products/{{ product.id }}">
@@ -45,75 +51,31 @@
             </div>
 
             <!-- begin footer -->
-
             <div class="footer-pagination">
                 <div class="row">
                     <div class="col-md-6"></div>
 
                     <div class="col-md-6">
                         <div class="row">
-                            <div class="col-md-9" style="padding-left: 30%;">
-                            
-                            <pagination-controls
-                            previousLabel="Prev"
-                            nextLabel="Next"
-                            [responsive]="true"
-                            (pageChange)="handlePageChange($event)"
-                            
-                            ></pagination-controls>
-                            
+                            <div class="col-md-9" style="padding-left: 30%">
+
+                                <ngb-pagination [(page)]="thePageNumber"
+                                                [pageSize]="thePageSize"
+                                                [collectionSize]="theTotalElements"
+                                                (pageChange)="listProducts()">
+
+                                </ngb-pagination>
                             </div>
-
-                            <div class="col-md-3 mt-2" style="text-align: right;">
-                            
-                            <span class="mr-2">Page Size</span>
-
-                            <select #myPageSelect (change)="
-                            updatePageSize($event)">
-                            <option>2</option>
-                            <option selected="true">5</option>
-                            <option>10</option>
-                            <option>20</option>
-                            <option>50</option>
-                            </select>
-                            </div>
-
-
-
-
                         </div>
                     </div>
+
                 </div>
             </div>
-    
-            <!--
-            <div class="footer-pagination">
-                <div class="row">
-                    <div class="col-md-6"></div>
-                    <div class="col-md-3">
-                        <div class="items">
-                            <label>Item per page</label> <select>
-                                <option>10</option>
-                                <option>20</option>
-                                <option>30</option>
-                                <option>40</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="number">1 - 10 of 100</div>
-                    </div>
-                    <div class="col-md-1">
-                        <div class="arrows">
-                            <a href="#"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            -->
 
             <!-- end footer -->
+
+
+    
             
         </div>
     </div>
