--- a/frontend/src/app/components/product-list/product-list-grid.component.html
+++ b/frontend/src/app/components/product-list/product-list-grid.component.html
@@ -37,7 +37,7 @@
                         <h2>{{ product.description }}</h2>
 
                         <div class="price">{{ product.unitPrice | currency:'USD' }}</div>
-                        <a href="#" class="primary-btn">Add to cart</a>
+                        <button (click)="addToCart(product)" class="btn btn-primary btn-sm">Add to cart</button>
                     </div>
 
                 </div>
