--- a/frontend/src/app/frontend/components/home/home.component.html
+++ b/frontend/src/app/frontend/components/home/home.component.html
@@ -4,7 +4,7 @@
 
             
 
-            <img src="../../../../assets/frontend/images/slider/slide-2.jpg">
+            <img src="assets/frontend/images/slider/slide-2.jpg">
 
 
 
