Implement Authentication & Authorization in Angular

--- a/frontend/src/app/frontend/components/search/search.component.html
+++ b/frontend/src/app/frontend/components/search/search.component.html
@@ -44,24 +44,24 @@
                                 <ul style="width:120px">
                                     <li>
 
-                                        <a href="dashboard.html"><i class="fas fa-user-circle u-s-m-r-6"></i>
+                                        <a routerLink="/profile"><i class="fas fa-user-circle u-s-m-r-6"></i>
 
                                             <span>Account</span></a></li>
                                     <li>
 
-                                        <a href="signup.html"><i class="fas fa-user-plus u-s-m-r-6"></i>
+                                        <a routerLink="/register"><i class="fas fa-user-plus u-s-m-r-6"></i>
 
-                                            <span>Signup</span></a></li>
+                                            <span>Register</span></a></li>
                                     <li>
 
-                                        <a href="signin.html"><i class="fas fa-lock u-s-m-r-6"></i>
+                                        <a routerLink="/login"><i class="fas fa-lock u-s-m-r-6"></i>
 
-                                            <span>Signin</span></a></li>
+                                            <span>Login</span></a></li>
                                     <li>
 
-                                        <a href="signup.html"><i class="fas fa-lock-open u-s-m-r-6"></i>
+                                        <a routerLink="/logout"><i class="fas fa-lock-open u-s-m-r-6"></i>
 
-                                            <span>Signout</span></a></li>
+                                            <span>Logout</span></a></li>
                                 </ul>
                                 <!--====== End - Dropdown ======-->
                             </li>
