--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -8,3 +8,12 @@
     --mat-mdc-snack-bar-button-color: white !important;
     white-space: pre-wrap
   }
+
+
+
+  .error-snackbar {
+    --mdc-snackbar-container-color: red !important;
+    --mdc-snackbar-supporting-text-color: white !important;
+    --mat-mdc-snack-bar-button-color: white !important;
+    white-space: pre-wrap
+  }
