--- a/frontend/src/app/backend/components/backend-layout/backend-layout.component.html
+++ b/frontend/src/app/backend/components/backend-layout/backend-layout.component.html
@@ -30,6 +30,8 @@
     {% endfor %}
 -->
 
+<base href="/">
+
 
 <header id="header" class="media">
     <div class="pull-left h-logo">
@@ -60,11 +62,11 @@
 
             <ul class="dropdown-menu pull-right dm-icon">
                 <li>
-                    <a href="fos_user_change_password"><i class="zmdi zmdi-settings"></i> Change
+                    <a href="/changepassword"><i class="zmdi zmdi-settings"></i> Change
                         Password</a>
                 </li>
                 <li>
-                    <a href="fos_user_security_logout"><i class="zmdi zmdi-time-restore"></i>
+                    <a routerLink="/logout"><i class="zmdi zmdi-time-restore"></i>
                         Logout</a>
                 </li>
             </ul>
