--- a/frontend/src/app/frontend/components/cart-status/cart-status.component.html
+++ b/frontend/src/app/frontend/components/cart-status/cart-status.component.html
@@ -21,7 +21,7 @@
                     <a href="index.html"><i class="fas fa-home u-c-brand"></i></a></li>
                 <li>
 
-                    <a href="wishlist.html"><i class="far fa-heart"></i></a></li>
+                    <a routerLink="/wishlist"><i class="far fa-heart"></i></a></li>
                 <li class="has-dropdown">
 
                     <a class="mini-cart-shop-link"><i class="fas fa-shopping-bag"></i>
