--- a/frontend/src/app/frontend/components/product-list/product-list.component.html
+++ b/frontend/src/app/frontend/components/product-list/product-list.component.html
@@ -1079,10 +1079,18 @@
                                                     <div class="product-m__hover">
                                                         <div class="product-m__preview-description">
 
-                                                            <span>{{ product.description }}</span></div>
+                                                            <span>{{ product.description }}</span>
+                                                        
+                                                        </div>
                                                         <div class="product-m__wishlist">
 
-                                                            <a class="far fa-heart" href="#" data-tooltip="tooltip" data-placement="top" title="Add to Wishlist"></a></div>
+                                                            <!--
+
+                                                            <span *ngIf="isWishlisted(product)">Product wishlisted</span>
+
+                                                            -->
+
+                                                            <a class="far fa-heart" data-tooltip="tooltip" data-placement="top" title="Add to Wishlist" (click)="addToWishlist(product)"></a></div>
                                                     </div>
                                                 </div>
                                             </div>
